--- a/app/src/main/res/layout/activity_appointment_confirmed.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmed.xml
@@ -33,7 +33,7 @@
                     android:layout_marginBottom="8dp"
                     android:paddingLeft="3dp"
                     android:paddingBottom="2dp"
-                    android:src="@drawable/goa" />
+                    app:srcCompat="@drawable/goa" />
             </android.support.v7.widget.CardView>
 
             <TextView
@@ -66,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="fitStart"
-                    android:src="@drawable/ic_check_circle_black_24dp" />
+                    app:srcCompat="@drawable/ic_check_circle_black_24dp" />
 
                 <TextView
                     android:layout_width="match_parent"
