--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,135 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.infideap.drawerbehavior.Advance3DDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@android:color/darker_gray"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <ScrollView
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <!-- Right navigation drawer -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view_notification"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:scrollbarThumbVertical="@null">
+        android:layout_gravity="end"
+        android:fitsSystemWindows="false"
+        app:menu="@menu/activity_main_drawer" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="155dp"
-                android:layout_height="155dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:elevation="10dp"
-                app:cardCornerRadius="80dp">
-
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="140dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="8dp"
-                    android:paddingLeft="3dp"
-                    android:paddingBottom="2dp"
-                    android:src="@drawable/goa" />
-            </android.support.v7.widget.CardView>
-
-            <TextView
-                android:id="@+id/revText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/rev"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/govText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
-                android:gravity="center"
-                android:text="@string/gov"
-                android:textSize="16sp" />
-
-            <!--<GridLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_marginBottom="12dp"-->
-            <!--android:layout_weight="8"-->
-            <!--android:alignmentMode="alignMargins"-->
-            <!--android:columnCount="2"-->
-            <!--android:rowCount="2">-->
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="157dp"
-                    android:layout_height="215dp"
-                    android:onClick="combineForm"
-                    android:text="@string/ins"
-                    android:textSize="14sp"
-                    android:drawableTop="@drawable/money"
-                    android:layout_marginRight="10dp"/>
-
-
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="157dp"
-                    android:layout_height="215dp"
-                    android:onClick="doDeedRegister"
-                    android:text="@string/deed"
-                    android:drawableTop="@drawable/addfriend"
-                    android:textSize="14sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="157dp"
-                    android:layout_height="215dp"
-                    android:onClick="doMarriageRegistration"
-                    android:text="@string/marr"
-                    android:textSize="14sp"
-                    android:layout_marginRight="10dp"
-                    android:drawableTop="@drawable/weddingrings"/>
-
-
-
-                <Button
-                    android:id="@+id/button4"
-                    android:layout_width="157dp"
-                    android:layout_height="215dp"
-                    android:onClick="doViewStaus"
-                    android:text="@string/view"
-                    android:textSize="14sp"
-                    android:drawableTop="@drawable/eyeyellow" />
-
-
-            </LinearLayout>
-
-            <!--</GridLayout>-->
-
-        </LinearLayout>
-
-
-    </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</com.infideap.drawerbehavior.Advance3DDrawerLayout>
