--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -26,13 +26,13 @@
                 android:layout_marginEnd="20dp"
                 android:background="#4169E1"
                 android:onClick="editProfile"
-                android:src="@drawable/ic_edit_white" />
+                app:srcCompat="@drawable/ic_edit_white" />
 
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:src="@drawable/ic_person_white" />
+                app:srcCompat="@drawable/ic_person_white" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -152,7 +152,7 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
-                    android:src="@drawable/ic_edit_profile" />
+                    app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
@@ -184,7 +184,7 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="3.5dp"
                     android:layout_marginEnd="5.5dp"
-                    android:src="@drawable/ic_edit_profile" />
+                    app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
@@ -215,7 +215,7 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
-                    android:src="@drawable/ic_edit_profile" />
+                    app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
@@ -245,7 +245,7 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
-                    android:src="@drawable/ic_edit_profile" />
+                    app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
@@ -275,7 +275,7 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
-                    android:src="@drawable/ic_edit_profile" />
+                    app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
