--- a/app/src/main/res/layout/activity_state_progress_bar.xml
+++ b/app/src/main/res/layout/activity_state_progress_bar.xml
@@ -1166,7 +1166,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:scaleType="fitStart"
-                                android:src="@drawable/ic_check_circle_black_24dp" />
+                                app:srcCompat="@drawable/ic_check_circle_black_24dp" />
 
                             <TextView
                                 android:layout_width="match_parent"
