--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
@@ -9,11 +9,17 @@
         <item name="android:colorBackground">@color/colorBackground</item>
     </style>
 
-    <!--<style name="MyOverflowMenu" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!--<item name="overlapAnchor">false</item>-->
-        <!--<item name="android:overlapAnchor" tools:ignore="NewApi">false</item>-->
-        <!--<item name="android:dropDownVerticalOffset">4.0dip</item>-->
-    <!--</style>-->
+    <!--Navigational drawer-->
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!---->
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
