--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,35 +17,30 @@
             android:id="@+id/language_menu_item"
             android:icon="@drawable/ic_language"
             android:orderInCategory="100"
-            android:title="English"
-            app:showAsAction="never" />
-
-        <item
-            android:id="@+id/language_menu_item2"
-            android:icon="@drawable/ic_language"
-            android:orderInCategory="100"
-            android:title="Hindi"
+            android:title="Language"
             app:showAsAction="never" />
 
         <item
             android:id="@+id/theme_menu_item"
-            android:icon="@drawable/ic_theme"
+            android:icon="@drawable/ic_night"
+            android:title="Night mode"
+            app:actionLayout="@layout/layout_switch"
             android:orderInCategory="100"
-            android:title="Light"
             app:showAsAction="never" />
 
-        <item
-            android:id="@+id/theme_menu_item2"
-            android:icon="@drawable/ic_theme"
-            android:orderInCategory="100"
-            android:title="Dark"
-            app:showAsAction="never" />
 
         <item
             android:id="@+id/about_menu_item"
             android:icon="@drawable/ic_info"
             android:orderInCategory="100"
             android:title="About e-Panjeeyan"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/help_menu_item"
+            android:icon="@drawable/ic_help"
+            android:orderInCategory="100"
+            android:title="Help"
             app:showAsAction="never" />
 
         <item
