--- a/app/src/main/res/layout/activity_deed_registration.xml
+++ b/app/src/main/res/layout/activity_deed_registration.xml
@@ -59,7 +59,6 @@
             android:layout_weight="0.5"
             android:orientation="vertical">
 
-
             <!-- Appointment Form -->
             <android.support.v7.widget.CardView
                 android:id="@+id/appoint_form"
@@ -90,11 +89,11 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
-
                     </android.support.design.widget.TextInputLayout>
+
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/usernameWrapper"
@@ -162,7 +161,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -178,7 +177,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -194,7 +193,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/dis"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -734,6 +733,4 @@
     </ScrollView>
 
 </LinearLayout>
-
-
 
