--- a/app/src/main/res/layout/activity_marriage_registration.xml
+++ b/app/src/main/res/layout/activity_marriage_registration.xml
@@ -89,7 +89,7 @@
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="8dp"
                             android:drawableLeft="@drawable/ic_person"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -201,7 +201,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -235,7 +235,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_work"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -252,7 +252,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_father"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -298,7 +298,7 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -314,7 +314,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_location_on"
                             android:hint="@string/police"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -330,7 +330,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -346,7 +346,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/district"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -362,7 +362,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="@string/state"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -438,6 +438,7 @@
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
                             android:textColor="#4682B4"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -454,6 +455,7 @@
                             android:drawableLeft="@drawable/ic_location_on"
                             android:hint="@string/police"
                             android:textColor="#4682B4"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -470,6 +472,7 @@
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
                             android:textColor="#4682B4"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -486,6 +489,7 @@
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/district"
                             android:textColor="#4682B4"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -501,7 +505,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="@string/state"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -576,7 +580,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -610,7 +614,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_work"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -627,7 +631,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_father"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -673,7 +677,7 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -689,7 +693,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_location_on"
                             android:hint="@string/police"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -705,7 +709,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -722,6 +726,7 @@
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/district"
                             android:textColor="#4682B4"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -737,7 +742,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="@string/state"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -812,7 +817,7 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -828,7 +833,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_location_on"
                             android:hint="@string/police"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -844,7 +849,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -860,7 +865,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/district"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -876,7 +881,7 @@
                             android:layout_margin="8dp"
                             android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="@string/state"
-                            android:inputType="text"
+                            android:inputType="textCapWords"
                             android:textSize="16sp" />
                     </android.support.design.widget.TextInputLayout>
 
