--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -88,7 +88,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardEdit"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
@@ -101,18 +101,18 @@
             android:layout_height="wrap_content"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:gravity="left|center"
+            android:gravity="center"
             android:text="@string/editpro"
+            android:paddingTop="6dp"
             android:textColor="#fff"
-            android:textSize="22sp"
-            android:drawableLeft="@drawable/editprofile"/>
+            android:textSize="18sp" />
 
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/myprofileEdit2"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="480dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
@@ -126,8 +126,10 @@
             android:orientation="vertical">
 
             <FrameLayout
+                android:id="@+id/frameUname"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="visible">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/usernameWrapper"
@@ -152,14 +154,17 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
+                    android:onClick="updateUserName"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
 
             <FrameLayout
+                android:id="@+id/frameNumber"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/numberWrapper"
@@ -184,14 +189,17 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="3.5dp"
                     android:layout_marginEnd="5.5dp"
+                    android:onClick="updateUserPhone"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
 
             <FrameLayout
+                android:id="@+id/frameEmail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/emailWrapper"
@@ -215,18 +223,22 @@
                     android:layout_gravity="right|center"
                     android:layout_marginTop="1.5dp"
                     android:layout_marginEnd="5.5dp"
+                    android:onClick="updateUserEmail"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
 
             <FrameLayout
+                android:id="@+id/frameNpswd"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/npasswordWrapper"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/npassword"
@@ -238,25 +250,19 @@
                         android:textSize="16sp" />
                 </android.support.design.widget.TextInputLayout>
 
-                <ImageButton
-                    android:id="@+id/update_newpswd_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center"
-                    android:layout_marginTop="1.5dp"
-                    android:layout_marginEnd="5.5dp"
-                    app:srcCompat="@drawable/ic_edit_profile" />
-
             </FrameLayout>
 
             <FrameLayout
+                android:id="@+id/frameCpswd"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/cpasswordWrapper"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/cpassword"
@@ -268,33 +274,26 @@
                         android:textSize="16sp" />
                 </android.support.design.widget.TextInputLayout>
 
-                <ImageButton
-                    android:id="@+id/update_conpswd_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center"
-                    android:layout_marginTop="1.5dp"
-                    android:layout_marginEnd="5.5dp"
-                    app:srcCompat="@drawable/ic_edit_profile" />
-
             </FrameLayout>
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/linearLayoutButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center|bottom"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <Button
-                android:id="@+id/btnSubmit"
+                android:id="@+id/btnChange"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#228B22"
-                android:onClick="submitIt"
                 android:text="@string/chngpswd"
+                android:onClick="updatePassword"
                 android:textColor="#fff" />
 
 
