--- a/app/src/main/res/layout/activity_make_assessment_fee.xml
+++ b/app/src/main/res/layout/activity_make_assessment_fee.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -35,7 +36,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/appoint_form"
@@ -74,19 +76,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="6dp"
-                        android:text="@string/below"
-                        android:textColor="#D81B60" />
+                        android:text="@string/below" />
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/considerationWrapper"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/considerationAmt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_monetization"
                             android:hint="@string/conAmt"
                             android:inputType="number"
@@ -119,7 +122,7 @@
                             android:id="@+id/radio_both"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:checked="true"
+                            android:checked="false"
                             android:text="@string/radio_both"
                             android:textSize="15sp" />
 
@@ -164,7 +167,7 @@
                             android:id="@+id/urbanMCA"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:checked="true"
+                            android:checked="false"
                             android:text="@string/urbanMCA"
                             android:textSize="15sp" />
 
