--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -35,11 +35,11 @@
                 app:srcCompat="@drawable/ic_person_white" />
 
             <TextView
+                android:id="@+id/myprofName"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
-                android:text="@string/myprofName"
                 android:textColor="#fff"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -63,19 +63,19 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/myprofNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_phone_blue"
                 android:padding="20dp"
-                android:text="  9706672004"
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/myprofEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_contact_mail"
                 android:padding="20dp"
-                android:text="   dipsikhaphukan09@gmail.com"
                 android:textSize="18sp" />
 
         </LinearLayout>
@@ -152,9 +152,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center"
-                    android:layout_marginTop="1.5dp"
-                    android:layout_marginEnd="5.5dp"
                     android:onClick="updateUserName"
+                    style="?android:buttonBarButtonStyle"
+                    android:layout_marginEnd="-6dp"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
@@ -187,9 +187,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center"
-                    android:layout_marginTop="3.5dp"
-                    android:layout_marginEnd="5.5dp"
                     android:onClick="updateUserPhone"
+                    style="?android:buttonBarButtonStyle"
+                    android:layout_marginEnd="-6dp"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
@@ -221,23 +221,49 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right|center"
-                    android:layout_marginTop="1.5dp"
-                    android:layout_marginEnd="5.5dp"
                     android:onClick="updateUserEmail"
+                    style="?android:buttonBarButtonStyle"
+                    android:layout_marginEnd="-6dp"
                     app:srcCompat="@drawable/ic_edit_profile" />
 
             </FrameLayout>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardChangePassword"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="#4169E1"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/header_text3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:paddingTop="6dp"
+                    android:text="@string/chngpswd"
+                    android:textColor="#fff"
+                    android:textSize="18sp" />
+
+            </android.support.v7.widget.CardView>
 
             <FrameLayout
                 android:id="@+id/frameNpswd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:visibility="gone">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/npasswordWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:errorEnabled="true"
                     app:passwordToggleEnabled="true">
 
                     <EditText
@@ -262,6 +288,7 @@
                     android:id="@+id/cpasswordWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:errorEnabled="true"
                     app:passwordToggleEnabled="true">
 
                     <EditText
