--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -66,7 +66,7 @@
             android:layout_marginTop="130dp">
 
             <Button
-                android:id="@+id/btnSubmit"
+                android:id="@+id/btnCheck"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#228B22"
