--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,21 +15,26 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.v7.widget.CardView
-                android:layout_width="155dp"
-                android:layout_height="155dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:elevation="10dp"
-                app:cardCornerRadius="80dp">
+                app:cardCornerRadius="60dp">
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="140dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="8dp"
@@ -44,26 +49,17 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/rev"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/govText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:text="@string/gov"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
-            <!--<GridLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_marginBottom="12dp"-->
-            <!--android:layout_weight="8"-->
-            <!--android:alignmentMode="alignMargins"-->
-            <!--android:columnCount="2"-->
-            <!--android:rowCount="2">-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,17 +70,17 @@
                 <Button
                     android:id="@+id/button"
                     android:layout_width="157dp"
-                    android:layout_height="215dp"
+                    android:layout_height="190dp"
                     android:layout_marginRight="10dp"
                     android:drawableTop="@drawable/ic_feeicon"
                     android:onClick="combineForm"
-                    android:text="@string/ins"
+                    android:text="@string/title_check_fee"
                     android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="157dp"
-                    android:layout_height="215dp"
+                    android:layout_height="190dp"
                     android:drawableTop="@drawable/ic_deedicon"
                     android:onClick="doDeedRegister"
                     android:text="@string/deed"
@@ -96,15 +92,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="157dp"
-                    android:layout_height="215dp"
+                    android:layout_height="190dp"
                     android:layout_marginRight="10dp"
                     android:drawableTop="@drawable/ic_marriageicon"
                     android:onClick="doMarriageRegistration"
@@ -115,7 +109,7 @@
                 <Button
                     android:id="@+id/button4"
                     android:layout_width="157dp"
-                    android:layout_height="215dp"
+                    android:layout_height="190dp"
                     android:drawableTop="@drawable/ic_viewicon"
                     android:onClick="doViewStaus"
                     android:text="@string/view"
@@ -124,10 +118,7 @@
 
             </LinearLayout>
 
-            <!--</GridLayout>-->
-
         </LinearLayout>
-
 
     </ScrollView>
 
