--- a/app/src/main/res/layout/activity_deed_registration.xml
+++ b/app/src/main/res/layout/activity_deed_registration.xml
@@ -73,7 +73,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="0.5"
                     android:orientation="vertical">
 
@@ -81,13 +81,15 @@
                         android:id="@+id/applicantNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/name">
+                        android:hint="@string/name"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/applicantName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_person"
                             android:inputType="textCapWords"
                             android:textSize="16sp" />
@@ -104,7 +106,8 @@
                             android:id="@+id/username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_email"
                             android:hint="@string/email"
                             android:inputType="textEmailAddress"
@@ -116,13 +119,15 @@
                         android:id="@+id/numberWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp">
+                        android:layout_marginTop="8dp"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_phone"
                             android:hint="@string/num"
                             android:inputType="phone"
@@ -134,13 +139,14 @@
                         android:id="@+id/addressWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp">
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/addressText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:layout_weight="1"
                             android:drawableLeft="@drawable/ic_add_location"
                             android:ems="10"
@@ -152,13 +158,15 @@
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/cityNamewrapper"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/city"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_location_city"
                             android:hint="@string/city"
                             android:inputType="textCapWords"
@@ -168,13 +176,15 @@
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/postofficeNamewrapper"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/postofficeName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_drafts"
                             android:hint="@string/post"
                             android:inputType="textCapWords"
@@ -184,13 +194,15 @@
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/districtNamewrapper"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/districtName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_home"
                             android:hint="@string/dis"
                             android:inputType="textCapWords"
@@ -200,13 +212,15 @@
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/pinWrapper"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true">
 
                         <EditText
                             android:id="@+id/pin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
                             android:drawableLeft="@drawable/ic_person_pin"
                             android:hint="@string/pin"
                             android:inputType="number"
@@ -218,6 +232,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginBottom="10dp" />
 
                     <Spinner
@@ -606,107 +621,40 @@
 
             </android.support.v7.widget.CardView>
 
+            <!--&lt;!&ndash;Payment gateway&ndash;&gt;-->
 
-            <!--Appointment confirmation form-->
+            <!--<android.support.v7.widget.CardView-->
+            <!--android:id="@+id/payment_form"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:visibility="gone">-->
 
-            <LinearLayout
-                android:id="@+id/confirm_appointment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="8dp"
-                    android:backgroundTint="#228B22">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitStart"
-                        app:srcCompat="@drawable/ic_check_circle_black_24dp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:gravity="center"
-                        android:paddingTop="6dp"
-                        android:text="Your Appointment is Confirmed"
-                        android:textColor="#fff"
-                        android:textSize="18sp" />
-
-                </android.support.v7.widget.CardView>
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="vertical">-->
 
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="10dp">
+            <!--<Button-->
+            <!--android:id="@+id/btnPay"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="30dp"-->
+            <!--android:backgroundTint="#228B22"-->
+            <!--android:onClick="doPayment"-->
+            <!--android:text="Make Payment"-->
+            <!--android:textColor="#fff" />-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_weight="0.5"
-                        android:orientation="vertical">
+            <!--</LinearLayout>-->
 
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Your Appointment ID:"
-                                android:textSize="17sp" />
+            <!--</android.support.v7.widget.CardView>-->
 
 
-                            <TextView
-                                android:id="@+id/appointment_id"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:textSize="17sp" />
 
-                        </LinearLayout>
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="4dp"
-                            android:text="**Please note this Appointment ID for future reference.\n"
-                            android:textColor="#F08080"
-                            android:textSize="13sp" />
-
-
-                        <TextView
-                            android:id="@+id/appointment_details"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="3dp"
-                            android:textSize="16sp" />
-
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-
-
-            </LinearLayout>
 
         </LinearLayout>
 
