--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -44,16 +45,18 @@
                 android:id="@+id/numberWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp">
+                app:errorEnabled="true">
 
                 <EditText
                     android:id="@+id/number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:drawableLeft="@drawable/ic_keyboard"
                     android:hint="@string/reff"
-                    android:inputType="phone"
+                    android:inputType="text"
+                    android:textAllCaps="true"
                     android:textSize="16sp" />
             </android.support.design.widget.TextInputLayout>
 
