--- a/app/src/main/res/layout/activity_appointment_confirmed.xml
+++ b/app/src/main/res/layout/activity_appointment_confirmed.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="155dp"
                 android:layout_height="155dp"
                 android:layout_gravity="center"
@@ -34,7 +34,7 @@
                     android:paddingLeft="3dp"
                     android:paddingBottom="2dp"
                     app:srcCompat="@drawable/goa" />
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                 android:textColor="#000"
                 android:textSize="16sp" />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="8dp"
@@ -79,9 +79,9 @@
                     android:textColor="#fff"
                     android:textSize="18sp" />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -125,7 +125,7 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
