--- a/app/src/main/res/layout/activity_bridedetails.xml
+++ b/app/src/main/res/layout/activity_bridedetails.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e3e3e3"
@@ -18,7 +16,7 @@
             android:layout_weight="0.5"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="8dp"
@@ -37,9 +35,9 @@
                     android:textColor="#fff"
                     android:textSize="18sp" />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
@@ -54,7 +52,7 @@
                     android:orientation="vertical"
                     android:layout_marginTop="8dp">
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/nameWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -71,9 +69,9 @@
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ageWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -90,9 +88,9 @@
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/occupationWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -109,9 +107,9 @@
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/fathernameWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -128,7 +126,7 @@
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
                     <Spinner
@@ -139,7 +137,7 @@
                         android:paddingEnd="20dp"
                         android:background="@drawable/spinner_border" />
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginStart="8dp"
@@ -158,9 +156,9 @@
                             android:textColor="#fff"
                             android:textSize="18sp" />
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/cityNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -176,9 +174,9 @@
                             android:textColor="#4682B4"
                             android:textSize="16sp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/policeStationwrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -194,9 +192,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border" />
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/postofficeNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -212,9 +210,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/districtNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -230,9 +228,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/stateNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -248,9 +246,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/pinWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -266,9 +264,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/lengthResidencewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -284,9 +282,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginStart="8dp"
@@ -311,9 +309,9 @@
                             android:buttonTint="@android:color/white"
                             android:id="@+id/checkbox"/>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_cityNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -329,9 +327,9 @@
                             android:textColor="#4682B4"
                             android:textSize="16sp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_policeStationwrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -347,9 +345,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_postofficeNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -365,9 +363,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_districtNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -383,9 +381,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_stateNamewrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -401,9 +399,9 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/per_pinWrapper"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -419,7 +417,7 @@
                             android:textSize="16sp"
                             android:layout_margin="8dp"
                             android:background="@drawable/edittext_border"/>
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
                 </LinearLayout>
@@ -452,7 +450,7 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
