--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/myprofile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -46,9 +46,9 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/myprofileDetails"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -80,12 +80,12 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
     <!--Edit Profile-->
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardEdit"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -107,9 +107,9 @@
             android:textColor="#fff"
             android:textSize="18sp" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/myprofileEdit2"
         android:layout_width="match_parent"
         android:layout_height="480dp"
@@ -131,8 +131,8 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/usernameWrapper"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/emailWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -145,7 +145,7 @@
                         android:inputType="text"
                         android:textSize="16sp" />
 
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
                     android:id="@+id/update_user_name_button"
@@ -166,8 +166,8 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/numberWrapper"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/deptNumWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp">
@@ -180,7 +180,7 @@
                         android:hint="@string/phone"
                         android:inputType="phone"
                         android:textSize="16sp" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
                     android:id="@+id/update_num_button"
@@ -201,7 +201,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/emailWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -214,7 +214,7 @@
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
                         android:textSize="16sp" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
                     android:id="@+id/update_email_button"
@@ -228,7 +228,7 @@
 
             </FrameLayout>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cardChangePassword"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -250,7 +250,7 @@
                     android:textColor="#fff"
                     android:textSize="18sp" />
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <FrameLayout
                 android:id="@+id/frameNpswd"
@@ -259,7 +259,7 @@
                 android:layout_marginTop="20dp"
                 android:visibility="gone">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/npasswordWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -274,7 +274,7 @@
                         android:hint="@string/newpswd"
                         android:inputType="textPassword"
                         android:textSize="16sp" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </FrameLayout>
 
@@ -284,7 +284,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/cpasswordWrapper"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -299,7 +299,7 @@
                         android:hint="@string/conpswd"
                         android:inputType="textPassword"
                         android:textSize="16sp" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </FrameLayout>
 
@@ -326,7 +326,7 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
