--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,7 @@
 <resources>
     <color name="colorPrimary">#263238</color>
     <color name="colorPrimaryDark">#000a12</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#00b9b9</color>
     <color name="colorBackground">#EEEEEE</color>
-
 
 </resources>
