make payment deed half done

--- a/app/src/main/res/layout/activity_deed_registration.xml
+++ b/app/src/main/res/layout/activity_deed_registration.xml
@@ -862,7 +862,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:backgroundTint="#228B22"
-                            android:onClick="doSubmit"
+                            android:onClick="doPay"
                             android:text="@string/pay"
                             android:textColor="#ffff" />
 
