--- a/app/src/main/res/layout/activity_deed_registration.xml
+++ b/app/src/main/res/layout/activity_deed_registration.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!-- State progress bar -->
     <com.kofigyan.stateprogressbar.StateProgressBar
         android:id="@+id/state_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_margin="6dp"
         app:spb_checkStateCompleted="true"
         app:spb_currentStateDescriptionColor="#228B22"
@@ -31,6 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
+        android:visibility="invisible"
         android:backgroundTint="#4169E1">
 
         <TextView
@@ -48,9 +51,48 @@
     </androidx.cardview.widget.CardView>
 
 
+    <!-- No-Internet View -->
+    <LinearLayout
+        android:id="@+id/no_internet_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/no_internet_imageView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/ic_no_internet" />
+
+        <TextView
+            android:id="@+id/no_internet_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:drawableEnd="@drawable/ic_reload"
+            android:onClick="reloadData"
+            android:padding="8dp"
+            android:text="@string/error_no_internet"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/about_item_text_color" />
+
+    </LinearLayout>
+
+
+    <!-- All the Forms -->
     <ScrollView
+        android:id="@+id/my_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:scrollbarThumbVertical="@null">
 
         <LinearLayout
